fix(alerts): Close button overlaps w long text (#84)
* fix(colors) base.css compile

* fix(alerts): Close button overlaps w long text

fixes #83

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -4073,12 +4073,14 @@ a.badge:hover, a.badge:focus {
   border-radius: 0; }
 .btn-group-vertical > .btn:first-child:not(:last-child) {
   border-top-right-radius: 0;
+  border-top-left-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0; }
 .btn-group-vertical > .btn:last-child:not(:first-child) {
-  border-bottom-left-radius: 0;
   border-top-right-radius: 0;
-  border-top-left-radius: 0; }
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0; }
 
 .btn-group-vertical > .btn-group:not(:first-child):not(:last-child) > .btn {
   border-radius: 0; }
@@ -4267,7 +4269,8 @@ input[type="button"].btn-block {
   font-size: 20px;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  background-color: transparent; }
   .carousel-control.left {
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
@@ -4364,14 +4367,14 @@ input[type="button"].btn-block {
   .carousel-control .icon-next {
     width: 30px;
     height: 30px;
-    margin-top: -15px;
+    margin-top: -10px;
     font-size: 30px; }
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .icon-prev {
-    margin-left: -15px; }
+    margin-left: -10px; }
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-next {
-    margin-right: -15px; }
+    margin-right: -10px; }
 
   .carousel-caption {
     left: 20%;
@@ -4400,8 +4403,6 @@ input[type="button"].btn-block {
   .close > span {
     display: none; }
   .close:after {
-    position: absolute;
-    right: 15px;
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
@@ -6650,7 +6651,9 @@ input.input-lg:not([type]),
   .jumbotron > hr {
     border-top-color: #c9c9c9; }
   .container .jumbotron, .container-fluid .jumbotron {
-    border-radius: 0; }
+    border-radius: 0;
+    padding-left: 15px;
+    padding-right: 15px; }
   .jumbotron .container {
     max-width: 100%; }
   @media screen and (min-width: 768px) {
@@ -7015,8 +7018,12 @@ button.list-group-item-danger {
 
 .modal-header {
   padding: 15px;
-  border-bottom: 1px solid #e5e5e5;
-  min-height: 16.25px; }
+  border-bottom: 1px solid #e5e5e5; }
+  .modal-header:before, .modal-header:after {
+    content: " ";
+    display: table; }
+  .modal-header:after {
+    clear: both; }
 
 .modal-header .close {
   margin-top: -2px; }
@@ -9604,28 +9611,28 @@ input[datepicker-popup], input[uib-datepicker-popup] {
   background-color: #ccefe9; }
 
 .secondary-yellow {
-  color: #ffd24f; }
+  color: #F3C04F; }
 
 .secondary-yellow-bg {
-  background-color: #ffd24f; }
+  background-color: #F3C04F; }
 
 .secondary-yellow-80 {
-  color: #ffdb72; }
+  color: #f5cd72; }
 
 .secondary-yellow-80-bg {
-  background-color: #ffdb72; }
+  background-color: #f5cd72; }
 
 .secondary-yellow-50 {
-  color: #ffe8a7; }
+  color: #f9dfa7; }
 
 .secondary-yellow-50-bg {
-  background-color: #ffe8a7; }
+  background-color: #f9dfa7; }
 
 .secondary-yellow-20 {
-  color: #fff6dc; }
+  color: #fdf2dc; }
 
 .secondary-yellow-20-bg {
-  background-color: #fff6dc; }
+  background-color: #fdf2dc; }
 
 .secondary-orange {
   color: #f6905d; }
