--- a/app/styles/bootstrap/converted/_close.scss
+++ b/app/styles/bootstrap/converted/_close.scss
@@ -6,7 +6,7 @@
   background: none;
   line-height: 1;
   text-transform: none;
-  background: transparent;  
+  background: transparent;
   border: 0;
   padding: 0;
   cursor: pointer;
@@ -16,8 +16,6 @@
     display: none;
   }
   &:after {
-    position: absolute;
-    right: 15px;
     @include fa-icon();
     @include fontSize(20px);
     content: $fa-var-close;
