--- a/app/styles/site.css
+++ b/app/styles/site.css
@@ -186,13 +186,13 @@ ul.figure li a {
   .t-box-color-swatch.secondary-green-20 {
     background-color: #ccefe9; }
   .t-box-color-swatch.secondary-yellow {
-    background-color: #ffd24f; }
+    background-color: #F3C04F; }
   .t-box-color-swatch.secondary-yellow-80 {
-    background-color: #ffdb72; }
+    background-color: #f5cd72; }
   .t-box-color-swatch.secondary-yellow-50 {
-    background-color: #ffe8a7; }
+    background-color: #f9dfa7; }
   .t-box-color-swatch.secondary-yellow-20 {
-    background-color: #fff6dc; }
+    background-color: #fdf2dc; }
   .t-box-color-swatch.secondary-orange {
     background-color: #f6905d; }
   .t-box-color-swatch.secondary-orange-80 {
